--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Final group project",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "server": "nodemon server/server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \" npm run server\" \" npm run client\" "
