--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "express-validator": "^6.12.2",
+    "express-validator": "^6.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.9",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
