--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.23.0",
-    "node-sass": "^6.0.1",
     "js-cookie": "^3.0.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
